<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ĐỊA ĐIỂM</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="Noi_an">Loại Thức Ăn:</string>
    <string name="Tim_Noi_an">Tên Quán:</string>
    <string name="Quan">Quận,Huyện:</string>
    <string name="Dia_diem">Tìm địa điểm ăn uống</string>
    <string name="Ten">Mời nhập tên món ăn cần tìm</string>
    <string name="Tim">Tìm Kiếm</string>
    <string name="Listview">DANH SÁCH ĐỊA ĐIỂM</string>
    <string name="Listview_Nhat">DANH SÁCH QUÁN ĂN NHẬT</string>
    <string name="Listview_Au">DANH SÁCH QUÁN ĂN ÂU</string>
    <string name="Listview_Phap">DANH SÁCH QUÁN ĂN PHÁP</string>

    <string name="NhaHang">DANH SÁCH NHÀ HÀNG</string>
    <string name="QuanAn">DANH SÁCH QUÁN ĂN</string>
    <string name="Cafe">DANH SÁCH QUÁN CAFE</string>
    <string name="Banh">DANH SÁCH TIỆM BÁNH</string>
    <string name="HaiSan">DANH SÁCH QUÁN HẢI SẢN</string>
    <string name="Lau">DANH SÁCH QUÁN LẨU</string>
    <string name="Chien">DANH SÁCH MÓN CHIÊN</string>
    <string name="Hap">DANH SÁCH MÓN HẤP</string>
    <string name="Xao">DANH SÁCH MÓN XÀO</string>
    <string name="Nuong">DANH SÁCH MÓN NƯỚNG</string>
    <string name="Quan1">QUÁN ĂN QUẬN 1</string>
    <string name="Quan3">QUÁN ĂN QUẬN 3</string>
    <string name="Quan5">QUÁN ĂN QUẬN 5</string>
    <string name="Quan10">QUÁN ĂN QUẬN 10</string>
    <string name="Quan11">QUÁN ĂN QUẬN 11</string>
    <string name="TanPhu">QUÁN ĂN TÂN PHÚ</string>
    <string name="TanBinh">QUÁN ĂN TÂN BÌNH</string>
    <string name="GoVap">QUÁN ĂN GÒ VẤP</string>
    <string name="BinhThanh">QUÁN ĂN BÌNH THẠNH</string>

    <string-array name="nav_drawer_items">
        <item>Trang Chủ</item>
        <item>Tất cả các món</item>
        <item>Món Ăn Nhật</item>
        <item>Món Ăn Âu</item>
        <item>Món Ăn Pháp</item>
        <item>Giới Thiệu</item>
        <item>Góp ý,Báo lỗi</item>
    </string-array>
    <string-array name="nav_drawer_items2">
        <item>Trang Tìm Kiếm</item>
        <item>Tất cả các món</item>
        <item>Món Ăn Nhật</item>
        <item>Món Ăn Âu</item>
        <item>Món Ăn Pháp</item>
        <item>Giới Thiệu</item>
        <item>Góp ý,Báo lỗi</item>
    </string-array>

    <array name="nav_drawer_icon">
        <item>@drawable/icon_home</item>
        <item>@drawable/icon_allmon</item>
        <item>@drawable/icon_monnhat</item>
        <item>@drawable/icon_monau</item>
        <item>@drawable/icon_monphap</item>
        <item>@drawable/icon_about</item>
        <item>@drawable/icon_error</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_maps">Google Map</string>

</resources>
