<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff424242"
    tools:context="com.DiaDiem.app.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:paddingRight="5dip">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:paddingRight="5dip" />
        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/vien_search">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dia_diem"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="30dp"
        android:gravity="center"/>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="35dp"
                android:layout_width="0dp"
                android:paddingTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Tim_Noi_an"
                android:textSize="18dp"
                android:layout_weight="0.8"
                android:textColor="#000000"/>
            <EditText android:id="@+id/edit_search"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_marginRight="15dp"
                android:layout_weight="2.1"
                android:background="@drawable/vien_search"
                android:textStyle="italic"
                android:inputType="textAutoComplete|text|textCapWords"
                android:hint="@string/Ten"
                android:textAlignment="center"
                android:ems="10"/>
        </TableRow>
    </TableLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ListView android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </ListView>
        </FrameLayout>
    </TableLayout>
    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </FrameLayout>
    <ListView
        android:id="@+id/list_slider_menu"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@drawable/vien_listview"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector"
        android:background="@color/list_background"/>
</android.support.v4.widget.DrawerLayout>

